log
Fri Mar 26 18:58:37 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:45: error: expected expression before ‘)’ token
   List * lista = (List *)calloc(NULL, (List));
                                             ^
list.c:32:33: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   List * lista = (List *)calloc(NULL, (List));
                                 ^~~~
In file included from test.c:2:0:
/usr/include/stdlib.h:541:14: note: expected ‘size_t {aka long unsigned int}’ but argument is of type ‘void *’
 extern void *calloc (size_t __nmemb, size_t __size)
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 18:58:57 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:39: error: expected expression before ‘List’
   List * lista = (List *)calloc(NULL, List);
                                       ^~~~
list.c:32:33: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   List * lista = (List *)calloc(NULL, List);
                                 ^~~~
In file included from test.c:2:0:
/usr/include/stdlib.h:541:14: note: expected ‘size_t {aka long unsigned int}’ but argument is of type ‘void *’
 extern void *calloc (size_t __nmemb, size_t __size)
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 18:59:06 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:36: error: expected expression before ‘List’
   List * lista = (List *)calloc(1, List);
                                    ^~~~
Compilation failed
Fri Mar 26 19:00:59 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
218cdb5
Fri Mar 26 19:01:11 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cfacb72
Fri Mar 26 19:10:47 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
378acaf
Fri Mar 26 19:19:54 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
330f627
Fri Mar 26 19:23:09 UTC 2021: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
241d68b
Fri Mar 26 19:34:38 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
40ae1af
Fri Mar 26 19:37:40 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8449f7f
Fri Mar 26 19:40:52 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2682786
Fri Mar 26 19:41:04 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
92fc25e
Fri Mar 26 19:49:24 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b15ba2c
Fri Mar 26 19:50:12 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
231872b
Fri Mar 26 19:51:08 UTC 2021: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
34db42d
Fri Mar 26 19:52:11 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a7be8f4
Fri Mar 26 19:57:55 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f8c4f31
Sat Mar 27 19:57:57 UTC 2021: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
a89004c
Sat Mar 27 19:59:13 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b499b2a
Sat Mar 27 19:59:45 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cf53bed
Sat Mar 27 20:00:18 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
658576c
Sat Mar 27 20:00:31 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
880ec32
Sat Mar 27 20:00:55 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dc3a2b2
Sat Mar 27 20:01:20 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3eba748
Sat Mar 27 20:02:30 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ae20276
Sat Mar 27 20:10:17 UTC 2021: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
de36478
Sat Mar 27 20:11:58 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2cf7025
Sat Mar 27 20:12:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dbe98a3
Sat Mar 27 20:13:00 UTC 2021: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
1e02fc9
Sat Mar 27 20:13:54 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f5bacb3
Sat Mar 27 20:14:03 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2386944
Sat Mar 27 20:17:22 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7e2a6a1
Sat Mar 27 20:18:01 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
7d2b2df
Sat Mar 27 20:20:23 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
14b9930
Sat Mar 27 20:24:10 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
162840d
Sat Mar 27 20:24:32 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a159bb3
Sat Mar 27 20:24:55 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ecbcd1c
Sat Mar 27 20:25:15 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
70484f6
Sat Mar 27 20:26:29 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0da47ad
Sat Mar 27 20:26:40 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
848ad01
Sat Mar 27 20:27:08 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2355782
Sat Mar 27 20:27:21 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5cc3cf5
Sat Mar 27 20:29:44 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9b7d7be
Sat Mar 27 20:30:04 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bdc87c6
Sat Mar 27 20:30:34 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c8d92e3
Sat Mar 27 20:31:58 UTC 2021: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
a078e86
Sat Mar 27 20:32:17 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2f4c9e9
Sat Mar 27 20:33:25 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c66b47e
Sat Mar 27 20:33:39 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
70f9e5a
Sat Mar 27 20:35:20 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1a2e40d
Sat Mar 27 20:35:46 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
791d382
Sat Mar 27 20:36:03 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
50146fd
Sat Mar 27 20:36:19 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c157f8d
Sat Mar 27 20:37:45 UTC 2021: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
8c23ff5
Sat Mar 27 20:39:01 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c7a7b4a
Sat Mar 27 20:39:14 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
a33d714
Sat Mar 27 20:44:02 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
5ba8c8b
Sat Mar 27 20:44:14 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
884bb3c
Sat Mar 27 20:47:50 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
4a2dabe
Sat Mar 27 20:48:18 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
34d9905
Sat Mar 27 20:48:39 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a8fe172
